# template-cpp-project

./: .clang-tidy  .cursorignore  CMakeLists.txt  CMakePresets.json  readme.md
.cursor/rules/: styling.mdc
.github/workflows/: android.yml  cmake-multi-platform.yml  codeql.yml  doxygen-docs.yml
android-project/: settings.gradle
android-project/app/: build.gradle
android-project/app/src/androidTest/java/com/egleba/app/: AppActivityTest.java
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/java/com/egleba/app/: AppActivity.java
android-project/app/src/test/java/com/egleba/app/: AppActivityTest.java
android-project/gradle/: libs.versions.toml
cmake/: cpm-config.cmake  sanitizers-config.cmake  warnings-config.cmake
cmake/code-quality/: clang_doc-config.cmake  clang_format-config.cmake  clang_tidy-config.cmake  cpplint-config.cmake  doxygen-config.cmake
cmake/cpm/: doctest-config.cmake  entt-config.cmake  freetype-config.cmake  glm-config.cmake  imgui-config.cmake  sdl3-config.cmake  spdlog-config.cmake
cmake/description/: package.desktop.in
cmake/pkg/: package-config.cmake
docker/: fedora.Dockerfile  manjaro.Dockerfile
src/: CMakeLists.txt  main.cpp  sdl_main.cpp
tests/: CMakeLists.txt  doctest_example.cpp  junit4_jni.cpp  main.cpp  main.h
tools/: tool.py
